fix bugs and add more function for calc

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -293,6 +293,9 @@
                                     </div>
                                 </li>
                             </ul>
+                            <ul class="configure__chosen-equipmentsAll">
+
+                            </ul>
                         </fieldset>
                         <fieldset data-choise="equipment" class="configure__form-group">
                             <div class="configure__form-group-header">
@@ -397,6 +400,9 @@
                                         <span class="configure__chosen-equipment-counter"></span>
                                     </button>
                                 </li>
+                            </ul>
+                            <ul class="configure__chosen-equipmentsAll">
+
                             </ul>
                         </fieldset>
                         <fieldset data-choise="equipment" class="configure__form-group">
