--- a/src/scss/components/configure.scss
+++ b/src/scss/components/configure.scss
@@ -368,8 +368,40 @@
         gap: 0.8rem;
         padding: 1.5rem;
         margin-bottom: 0;
+
+        &.hide {
+            display: none;
+        }
+
         @media (max-width: 400px) {
             padding: 0.5rem;
+        }
+    }
+
+    &__chosen-equipmentsAll {
+        max-height: 125px;
+        display: none;
+        overflow-y: scroll;
+        flex-wrap: wrap;
+        gap: 0.8rem;
+        padding: 1.5rem;
+        margin-bottom: 0;
+
+        &.active {
+            display: flex;
+        }
+
+        &::-webkit-scrollbar,
+        &::-webkit-scrollbar-thumb {
+          width: 24px;
+          border-radius: 20px;
+          opacity: 0.5;
+          background-clip: padding-box;
+          border: 10px solid transparent;
+        }
+        
+        &::-webkit-scrollbar-thumb {        
+            box-shadow: inset 0 0 0 10px #fff;
         }
     }
 
