--- a/src/partials/components/footer.hbs
+++ b/src/partials/components/footer.hbs
@@ -109,7 +109,7 @@
                   </svg>
                 </div>
               </a>
-              <a class="footer__addition-developed">
+              <a href="https://markweber.ru/" class="footer__addition-developed">
                 <span>Разработано в</span>
                
                  <svg width="93" height="24" viewBox="0 0 93 24" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
