--- a/src/partials/layouts/layout.hbs
+++ b/src/partials/layouts/layout.hbs
@@ -15,6 +15,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
     />
+     <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
@@ -59,6 +64,7 @@
         <script src="js/app.js"></script>
         <script src="assets/backend/backend.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
         {{!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> --}}
     </div>
 </body>
