--- a/src/scss/components/callback.scss
+++ b/src/scss/components/callback.scss
@@ -12,6 +12,7 @@
         @media (max-width: 1040px) {
             padding: 4.5rem 4rem;
         }
+
         @media (max-width: 550px) {
             padding: 2.5rem 2rem;
             border-radius: 5px;
@@ -29,6 +30,7 @@
         @media (max-width: 1040px) {
             flex-wrap: wrap;
         }
+
         @media (max-width: 440px) {
             gap: 2rem;
         }
@@ -42,6 +44,7 @@
     &__content-container__first h2 {
         font: var(--title-L);
         font-size: calc(40px + (85 - 40) * (100vw - 360px) / (1680 - 360));
+
         @media (max-width: 550px) {
             width: 10rem;
         }
@@ -71,9 +74,11 @@
     &__content-container__second-mobile {
         display: flex;
         gap: 5rem;
+
         @media (max-width: 1040px) {
             flex-wrap: wrap;
         }
+
         @media (max-width: 440px) {
             gap: 2rem;
         }
@@ -85,6 +90,7 @@
 
     &__content-container__second-expert-avatar {
         border-radius: 50%;
+
         @media (max-width: 440px) {
             width: 75px;
             height: 75px;
@@ -102,6 +108,7 @@
         @media (max-width: 1040px) {
             order: -1;
         }
+
         @media (max-width: 550px) {
             padding: 0.85rem 1.5rem 0.85rem 1rem;
             gap: 0.5rem;
@@ -120,6 +127,7 @@
     .work-now p {
         font: var(--body-XL);
         margin-bottom: 0;
+
         @media (max-width: 440px) {
             font-size: 1.6rem;
         }
@@ -127,6 +135,7 @@
 
     &__content-container__second-expert-name-title {
         font: var(--body-XX);
+
         @media (max-width: 440px) {
             font-size: 2.5rem;
         }
@@ -135,6 +144,7 @@
     &__content-container__second-expert-name-description {
         font: var(--body-S);
         max-width: 28rem;
+
         @media (max-width: 440px) {
             font-size: 1.2rem;
         }
@@ -149,12 +159,15 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
+
         @media (max-width: 540px) {
             flex: 0 0 40%;
         }
+
         @media (max-width: 440px) {
             flex: 0 0 68%;
         }
+
         @media (max-width: 367px) {
             flex: 0 0 67%;
         }
@@ -166,16 +179,20 @@
         border-bottom: 1px solid rgba(255, 255, 255, 0.2);
         padding-bottom: 4.5rem;
         padding-top: 4rem;
+
         @media (max-width: 1040px) {
             flex-wrap: wrap;
         }
+
         @media (max-width: 550px) {
             gap: 2rem;
         }
+
         @media (max-width: 440px) {
             padding-bottom: 2rem;
             padding-top: 2rem;
         }
+
         @media (max-width: 420px) {
             gap: 2rem;
             padding-bottom: 2.3rem;
@@ -184,6 +201,7 @@
 
     &__content-container__second {
         flex: 0 0 69%;
+
         @media (max-width: 800px) {
             flex: 0 0 100%;
         }
@@ -196,6 +214,7 @@
 
     &__content-container__second-callback {
         padding-top: 4.5rem;
+
         @media (max-width: 1040px) {
             display: none;
         }
@@ -294,6 +313,7 @@
 
     &__content-container__second-expert-name-hid-button {
         display: none;
+
         @media (max-width: 1040px) {
             display: flex;
             background-color: #ffffff;
@@ -305,10 +325,15 @@
             flex: 0 0 50%;
             justify-content: space-between;
             align-items: center;
+            font-size: 2.5rem;
         }
+
         @media (max-width: 550px) {
             flex: 0 0 100%;
             padding: 1.8rem 2rem 1.8rem 2.5rem;
+        }
+        @media (max-width: 500px) {
+            font-size: 2rem;
         }
     }
 
@@ -318,6 +343,7 @@
 
     &__content-container__contacts-mobile {
         display: none;
+
         @media (max-width: 1040px) {
             display: block;
             padding-top: 2.5rem;
@@ -328,16 +354,18 @@
         font: var(--title-S-narrow);
         font-size: calc(25px + (40 - 25) * (100vw - 360px) / (1680 - 360));
     }
+
     &__content-container__contacts-mobile p {
         padding-top: 1rem;
         opacity: 0.5;
         max-width: 32rem;
+
         @media (max-width: 440px) {
             font-size: 1.2rem;
         }
     }
 
-    input:required + label {
+    input:required+label {
         transition: all 0.3s ease;
         font-size: 1.6rem;
         font-weight: 700;
@@ -346,12 +374,42 @@
         padding: 0 3px;
     }
 
-    input:invalid + label {
+    input:invalid+label {
         transition: all 0.3s ease;
         font: var(--body-XL);
         color: #fff;
         position: absolute;
         left: 2.5rem;
         top: 28px;
+    }
+
+    .expert__agree-text a {
+        border-bottom: 1px solid #fff;
+        color: #fff;
+    }
+
+    .expert__agree-text:hover a {
+        border-bottom: none;
+    }
+
+    input:required+label {
+        transition: all 0.3s ease;
+        font-size: 1.6rem;
+        font-weight: 700;
+        top: -6px;
+        background-color: #2f83eb;
+        padding: 0 3px;
+        left: 2.5rem;
+        transform: translateY(0%);
+    }
+
+    input:invalid+label {
+        transition: all 0.3s ease;
+        font: var(--body-XL);
+        color: #fff;
+        position: absolute;
+        left: 2.5rem;
+        top: 50%;
+        transform: translateY(-50%);
     }
 }
