--- a/src/scss/components/characters.scss
+++ b/src/scss/components/characters.scss
@@ -95,6 +95,11 @@
         }
     }
 
+    .nav-item:hover {
+        color: #196BD1;
+        opacity: 1;
+    }
+
     .nav-item.tab-header_show {
         opacity: 1;
         position: relative;
@@ -111,6 +116,15 @@
     }
 
     .nav-item.tab-header_show::after {
+        content: '';
+        width: 100%;
+        height: 3px;
+        background-color: #1b74e3;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    .nav-item:hover:after {
         content: '';
         width: 100%;
         height: 3px;
@@ -168,16 +182,19 @@
         padding: 2.7rem 15.2rem 2.5rem 2.5rem;
 
         @media (max-width: 550px) {
-            font-size: 2rem;
+           
             padding: 2.5rem 14.2rem 2.5rem 2.5rem;
             border-radius: 5px;
-        }
-        @media (max-width: 411px) {
-            padding: 2.5rem 12.2rem 2.5rem 2.5rem;
             width: 100%;
         }
-        @media (max-width: 385px) {
-            padding: 2.2rem 7.2rem 2.2rem 2.5rem;
+        @media (max-width: 550px) {
+            padding: 1.9rem 2.5rem;
+        }
+        @media (max-width: 500px) {
+            font-size: 2rem;
+        }
+        @media (max-width: 411px) {
+            width: 100%;
         }
     }
 
