--- a/src/scss/components/configure.scss
+++ b/src/scss/components/configure.scss
@@ -12,8 +12,6 @@
         background-size: cover;
         border-radius: 1rem;
         color: #fff;
-        overflow: hidden;
-
         @media (max-width: 1327px) {
             padding: 10.5rem 3.7rem 7.7rem;
             @media (max-width: 600px) {
@@ -82,6 +80,20 @@
 
     &__tab-wrapper {
         flex: 1 1 12rem;
+    }
+
+    &__tab-wrapper:hover  {
+        color: #fff;
+        opacity: 1;
+    }
+    &__tab-wrapper:hover .configure__tab-text  {
+        color: #fff;
+    }
+    &__tab-wrapper:hover .configure__tab-upperline  {
+        height: 0.3rem;
+        top: 0;
+        opacity: 1;
+        background-color: #fff;
     }
 
     &__tab {
@@ -240,12 +252,6 @@
         padding-top: 25px;
         padding-left: 20px;
         padding-bottom: 25px;
-
-        @media (max-width: 1279px) {
-            padding-top: 15px;
-            padding-left: 10px;
-            padding-bottom: 15px;
-        }
     }
 
     &__form-group-item {
@@ -298,10 +304,6 @@
         font: var(--body-XL);
         color: var(--accent-primary);
         font-size: 20px;
-
-        @media (max-width: 1279px) {
-            padding-left: 10px;
-        }
     }
 
     &__form-group-header {
@@ -319,7 +321,7 @@
     &__form-group-title {
         font: var(--body-XL);
         margin: 0;
-        @media (max-width: 1150px) {
+        @media (max-width: 500px) {
             font-size: 2rem;
         }
     }
@@ -365,6 +367,7 @@
     
     &__chosen-equipment-wrapper {
         opacity: 0;
+        transition: opacity 0.3s ease-in-out;
         pointer-events: none;
     }
 
@@ -507,7 +510,7 @@
         justify-content: space-between;
         align-items: center;
         padding: 2.3rem 2.5rem 2rem;
-        @media (max-width: 400px) {
+        @media (max-width: 500px) {
             font-size: 2rem;
             padding: 1rem 2.5rem;
         }
@@ -556,7 +559,6 @@
         }
     }
 }
-
 .jisuzuCar * {
     opacity: 1;
     animation: hideConstrurt 0.3s ease-in-out forwards;
