--- a/src/scss/components/intro.scss
+++ b/src/scss/components/intro.scss
@@ -96,7 +96,7 @@
         }
 
         @media (max-width: 500px) {
-            padding: 2.2rem 2.5rem;
+            padding: 1.3rem 2.2rem;
 
             font: var(--other-L);
 
@@ -227,6 +227,9 @@
         }
     }
     .button {
-        padding-top: 2.7rem;
+        padding-top: 2.8rem;
+        @media (max-width: 500px) {
+            padding-top: 1.5rem;
+        }
     }
 }
