--- a/src/scss/components/order.scss
+++ b/src/scss/components/order.scss
@@ -18,7 +18,8 @@
             margin-left: auto;
             padding-top: 0;
         }
-        @media (max-width: 535px) {
+        @media (max-width: 500px) {
+            font-size: 2rem;
         }
     }
     &-content {
@@ -87,6 +88,9 @@
         text-transform: uppercase;
         padding: 2rem 2.5rem;
         border-radius: 10px;
+        @media (max-width: 500px) {
+            padding: 1rem 2.5rem;
+            }
     }
     &-main-icon {
         svg path {
@@ -208,5 +212,8 @@
 
     button {
         padding-top: 2.2rem;
+        @media (max-width: 500px) {
+            padding-top: 1.2rem;
+            }
     }
 }
