--- a/src/scss/components/plants.scss
+++ b/src/scss/components/plants.scss
@@ -376,9 +376,11 @@
                     width: 50%;
                 }
             }
-            @media (max-width: 533px) {
+            @media (max-width: 500px) {
                 & {
                     width: 100%;
+                    padding: 1rem 2.5rem;
+                    font-size: 2rem;
                 }
             }
         }
