--- a/src/scss/components/why.scss
+++ b/src/scss/components/why.scss
@@ -2,6 +2,22 @@
     position: relative;
     padding: calc(32px + (80 - 32) * (100vw - 360px) / (1680 - 360)) 0;
 
+    @keyframes animate_opacity {
+        0% {
+            transform: scale3d(1, 1, 1);
+            opacity: 0;
+        }
+
+        50% {
+            transform: scale3d(1.05, 1.05, 1.05);
+            opacity: 0.5;
+        }
+        100% {
+            transform: scale3d(1, 1, 1);
+            opacity: 1;
+        }
+    }
+
     &__expert-title h2 {
         font: var(--title-L);
 
@@ -63,6 +79,7 @@
 
     &__item {
         display: flex;
+        opacity: 0;
         gap: 2.5rem;
         width: 32%;
         @media (max-width: 1279px) {
@@ -122,11 +139,69 @@
             padding: 2.15rem 5.6rem;
             margin: 0 auto;
             margin-top: 3rem;
+            font-size: 2.5rem;
         }
 
         @media (max-width: 560px) {
             width: 100%;
             padding: 2rem;
+        }
+        @media (max-width: 500px) {
+            font-size: 2rem;
+        }
+    }
+}
+.why__wrapper.visible {
+    .why__item:first-child {
+        animation: animate_opacity 2s forwards;
+        // animation-delay: 0.3s;
+        animation-duration: 2s;
+    }
+    .why__item:nth-child(2) {
+        animation: animate_opacity 2s forwards;
+        animation-delay: 0.7s;
+        animation-duration: 2s;
+    }
+    .why__item:nth-child(3) {
+        animation: animate_opacity 2s forwards;
+        animation-delay: 1.1s;
+        animation-duration: 2s;
+    }
+    .why__item:nth-child(4) {
+        animation: animate_opacity 2s forwards;
+        animation-delay: 1.4s;
+        animation-duration: 2s;
+    }
+    .why__item:nth-child(5) {
+        animation: animate_opacity 2s forwards;
+        animation-delay: 1.8s;
+        animation-duration: 2s;
+        @media (max-width: 500px) {
+            animation-delay: 0.2s;
+        }
+    }
+    .why__item:nth-child(6) {
+        animation: animate_opacity 2s forwards;
+        animation-delay: 2.2s;
+        animation-duration: 2s;
+        @media (max-width: 500px) {
+            animation-delay: 0.4s;
+        }
+    }
+    .why__item:nth-child(7) {
+        animation: animate_opacity 2s forwards;
+        animation-delay: 2.6s;
+        animation-duration: 2s;
+        @media (max-width: 500px) {
+            animation-delay: 0.6s;
+        }
+    }
+    .why__item:nth-child(8) {
+        animation: animate_opacity 2s forwards;
+        animation-delay: 3s;
+        animation-duration: 2s;
+        @media (max-width: 500px) {
+            animation-delay: 0.8s;
         }
     }
 }
