--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -205,7 +205,7 @@ th {
 
 ::selection {
     color: white;
-    background-color: var(--primary-color);
+    background-color: var(--main-secondary);
 }
 
 input:-webkit-autofill,
