--- a/src/scss/global/_layout.scss
+++ b/src/scss/global/_layout.scss
@@ -79,7 +79,7 @@
         border-radius: 1rem;
         font: var(--body-XL);
         color: var(--accent-primary);
-        padding: 2rem 2.5rem;
+        padding: 1.7rem 2.5rem;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -122,10 +122,27 @@
     color: #fff;
     z-index: 1000;
     position: relative;
+    display: none;
+    border: none;
 }
+
+.parsley-error:focus + .parsley-errors-list li {
+    background-color: var(--accent-secondary);
+    display: block;
+}
+
+label {
+    pointer-events: none;
+}
+
 .parsley-error {
+    // border: 1px solid #fff!important;
+}
+
+.parsley-error:focus {
     border: 1px solid var(--accent-secondary) !important;
 }
+
 .parsley-error:focus ~ label,
 .parsley-error:not(:focus):valid ~ label {
     font-size: 1.6rem;
@@ -141,5 +158,10 @@
 }
 
 a:hover {
-    color: #EFF6FF;
+    color: #eff6ff;
+}
+.thanks {
+    .button {
+        margin-top: calc(25px + (40 - 25) * (100vw - 360px) / (1680 - 360));
+    }
 }
