--- a/src/scss/components/configure.scss
+++ b/src/scss/components/configure.scss
@@ -350,6 +350,12 @@
         }
     }
 
+    &__form-group.active {
+        label {
+            pointer-events: all;
+        }
+    }
+
     &__form-group-chosen {
         position: relative;
 
