add overflow hidden

--- a/src/scss/components/configure.scss
+++ b/src/scss/components/configure.scss
@@ -12,6 +12,7 @@
         background-size: cover;
         border-radius: 1rem;
         color: #fff;
+        overflow: hidden;
         @media (max-width: 1327px) {
             padding: 10.5rem 3.7rem 7.7rem;
             @media (max-width: 600px) {
