finally result of fix bugs

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -21,7 +21,7 @@
                             <use xlink:href="#time-icon"></use>
                         </svg>
                         <span class="intro__button-bottom-text">предложение ограничено</span>
-                        <span class="intro__button-bottom-timer" data-date=22/04/27><div id="hours"></div>:<div id="minutes"></div>:<div id="seconds"></div></span>
+                        <span class="intro__button-bottom-timer" data-date='2022,04,26'><div id="hours"></div>:<div id="minutes"></div>:<div id="seconds"></div></span>
                         <svg class="intro__button-bottom-bg">
                             <use xlink:href="#timer-bg"></use>
                         </svg>
@@ -2605,7 +2605,7 @@
             <div class="form-desk animate-top">
                 Наш эксперт свяжется с вами в ближайшее время </div>
         </div>
-            <button class="button" type="submit">Отправить еще раз</button>
+            <button class="button"  data-src="#consultant" data-fancybox="" type="submit">Отправить еще раз</button>
 
     </div>
 </div>
@@ -2618,7 +2618,7 @@
             <div class="form-desk animate-top">
                 Наш менеджер свяжется с вами в ближайшее время </div>
         </div>
-            <button class="button" type="submit">Отправить еще раз</button>
+            <button class="button" data-src="#order" data-fancybox="" type="submit">Отправить еще раз</button>
 
     </div>
 </div>
@@ -2631,7 +2631,7 @@
             <div class="form-desk animate-top">
                 Мы вышлем вам документацию на указанную электронную почту в ближайшее время</div>
         </div>
-            <button class="button" type="submit">Отправить еще раз</button>
+            <button class="button" data-src="#document" data-fancybox="" type="submit">Отправить еще раз</button>
 
     </div>
 </div>
