--- a/src/scss/components/configure.scss
+++ b/src/scss/components/configure.scss
@@ -43,6 +43,7 @@
 
     &__title {
         max-width: 64.1rem;
+        margin-bottom: 6rem;
         font-size: calc(40px + (85 - 40) * (100vw - 360px) / (1680 - 360));
         @media (max-width: 958px) {
             margin-bottom: 3rem;
@@ -389,7 +390,7 @@
         gap: 0.8rem;
         padding: 1.5rem;
         margin-bottom: 0;
-
+        
         &.hide {
             display: none;
         }
