--- a/src/scss/components/popup.scss
+++ b/src/scss/components/popup.scss
@@ -362,3 +362,16 @@ input:focus ~ label,
     display: block;
     padding-top: 5px;
 }
+
+.thanks .button, #thanks_manager .form-style-1 button {
+    background-color: #fff;
+    color: #1B74E3;
+    @media (max-width: 500px) {
+        font-size: 2rem;
+        background-color: #1B74E3;
+        color: #fff;
+        width: 100%;
+        padding: 1.9rem;
+        border-radius: 7px;
+}
+}
