--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -340,7 +340,7 @@
                                 <ul class="configure__form-group-list">
                                     {{#each additionalOptions }}
                                     <li class="configure__form-group-item">
-                                        <input id="additionalOptionsUaz{{@key}}" data-configName="{{this.title}}" data-price="{{this.price}}" class="configure__form-checkbox" type="checkbox">
+                                        <input id="additionalOptionsUaz{{@key}}" data-configName="{{this.title}}" data-config="uaz" data-price="{{this.price}}" class="configure__form-checkbox" type="checkbox">
                                         <div class="configure__form-checkboxCustom">
                                             <svg>
                                                 <use xlink:href="#checked"></use>
@@ -448,7 +448,7 @@
                                 <ul class="configure__form-group-list">
                                     {{#each additionalOptions }}
                                     <li class="configure__form-group-item">
-                                        <input id="additionalOptionsIsuzu{{@key}}" data-configName="{{this.title}}" data-price="{{this.price}}" class="configure__form-checkbox" type="checkbox">
+                                        <input id="additionalOptionsIsuzu{{@key}}" data-configName="{{this.title}}" data-config="isuzu" data-price="{{this.price}}" class="configure__form-checkbox" type="checkbox">
                                         <div class="configure__form-checkboxCustom">
                                             <svg>
                                                 <use xlink:href="#checked"></use>
