--- a/src/scss/components/configure.scss
+++ b/src/scss/components/configure.scss
@@ -577,17 +577,17 @@
         }
     }
 }
-.jisuzuCar * , .suazCar * {
+.jisuzuCar .show , .suazCar .show {
     opacity: 1;
-    animation: hideConstrurt 0.3s ease-in-out forwards;
+    animation: showConstrurt 0.3s ease-in-out;
 }
 
-.jisuzuCar .jhide, .suazCar .shide {
+.jhide, .shide {
     opacity: 0 ;
-    animation: showConstrurt 0.3s ease-in-out forwards;
+    animation: hideConstrurt 0.3s ease-in-out;
 }
 
-@keyframes showConstrurt {
+@keyframes hideConstrurt {
     from {
         opacity: 1;
     }
@@ -596,7 +596,7 @@
     }
 }
 
-@keyframes hideConstrurt {
+@keyframes showConstrurt {
     from {
         opacity: 0;
     }
