change color placeholder

--- a/src/scss/components/callback.scss
+++ b/src/scss/components/callback.scss
@@ -242,6 +242,10 @@
         height: 8rem;
         transition: all 0.5s ease;
 
+        &::placeholder {
+            color: #fff;
+        }
+
         @media (max-width: 1280px) {
             width: 100%;
         }
