--- a/src/scss/components/expert.scss
+++ b/src/scss/components/expert.scss
@@ -75,6 +75,9 @@
         font-size: 2.5rem;
         height: 8rem;
        
+        &::placeholder {
+            color: #fff
+        }
 
         @media (max-width: 560px) {
             height: 6rem;
